<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="red_button">RED</string>
    <string name="yellow_button">YELLOW</string>
    <string name="green_button">GREEN</string>
</resources>