<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/box_one_text"
        style="@style/whiteBox"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/box_text_size"
        android:text="@string/box_one"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/box_two_text"
        style="@style/whiteBox"
        android:layout_width="143dp"
        android:layout_height="144dp"
        android:layout_marginTop="16dp"
        android:text="@string/box_two"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/box_one_text"
        app:layout_constraintTop_toBottomOf="@+id/box_one_text" />

    <TextView
        android:id="@+id/box_two_text2"
        style="@style/whiteBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/box_three"
        android:layout_marginStart="@dimen/small_margin"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/box_two_text3"
        app:layout_constraintEnd_toEndOf="@+id/box_one_text"
        app:layout_constraintStart_toEndOf="@+id/box_two_text"
        app:layout_constraintTop_toTopOf="@+id/box_two_text"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/box_two_text3"
        style="@style/whiteBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:text="@string/box_four"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/box_two_text4"
        app:layout_constraintEnd_toEndOf="@+id/box_one_text"
        app:layout_constraintStart_toEndOf="@+id/box_two_text"
        app:layout_constraintTop_toBottomOf="@+id/box_two_text2" />

    <TextView
        android:id="@+id/box_two_text4"
        style="@style/whiteBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/small_margin"
        android:text="@string/box_five"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/box_two_text"
        app:layout_constraintEnd_toEndOf="@+id/box_one_text"
        app:layout_constraintStart_toEndOf="@+id/box_two_text"
        app:layout_constraintTop_toBottomOf="@+id/box_two_text3" />


</androidx.constraintlayout.widget.ConstraintLayout>